--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -132,7 +132,7 @@ jobs:
 
       - name: "Bazel: Build docs"
         if: ${{ success() || failure() }}
-        run: pnpm -s build:docs
+        run: pnpm -s build docs
 
       - name: "Artifact: Upload docs"
         if: github.event_name == 'pull_request' || github.ref == 'refs/heads/main'
