--- a/src/angular/tabs/BUILD.bazel
+++ b/src/angular/tabs/BUILD.bazel
@@ -35,7 +35,7 @@ ng_project(
 sass_library(
     name = "tabs_scss_lib",
     srcs = glob(["**/_*.scss"]),
-    deps = ["//src/angular/styles:scss_lib"],
+    deps = ["//src/angular:scss_lib"],
 )
 
 sass_binary(
@@ -57,7 +57,6 @@ sass_binary(
     src = "tab-header.scss",
     deps = [
         ":tabs_scss_lib",
-        "//src/angular:scss_lib",
     ],
 )
 
