--- a/tools/schematics/bazel/files/ngPackage/BUILD.bazel.template
+++ b/tools/schematics/bazel/files/ngPackage/BUILD.bazel.template
@@ -57,7 +57,7 @@ ts_config(
 sass_binary(
     name = "typography",
     src = "typography.scss",
-    deps = ["//src/angular:scss_lib"],
+    deps = ["//src/angular/styles:scss_lib"],
 )<% } %><% if (hasFullFont) { %>
 
 sass_binary(
@@ -68,7 +68,7 @@ sass_binary(
 sass_library(
     name = "scss_lib",
     srcs = glob(["**/_*.scss"]),
-    deps = ["//src/angular:scss_lib"],
+    deps = ["//src/angular/styles:scss_lib"],
 )<% } %><% for (let stylesheet of sassBinaries) { %>
 
 sass_binary(
