--- a/tools/schematics/bazel/files/ngPackage/BUILD.bazel.template
+++ b/tools/schematics/bazel/files/ngPackage/BUILD.bazel.template
@@ -63,6 +63,7 @@ sass_binary(
 sass_binary(
     name = "fullfont",
     src = "fullfont.scss",
+    deps = ["//src/angular/styles:scss_lib"],
 )<% } %><% if (hasSassLibrary) { %>
 
 sass_library(
