--- a/src/angular/checkbox/BUILD.bazel
+++ b/src/angular/checkbox/BUILD.bazel
@@ -32,6 +32,7 @@ ts_project(
     ),
     deps = [
         ":checkbox",
+        "//:node_modules/@angular/core",
         "//:node_modules/@angular/forms",
         "//:node_modules/@angular/platform-browser",
         "//src/angular/core/testing",
