--- a/src/angular/file-selector/BUILD.bazel
+++ b/src/angular/file-selector/BUILD.bazel
@@ -42,6 +42,7 @@ ts_project(
     ),
     deps = [
         ":file-selector",
+        "//:node_modules/@angular/core",
         "//:node_modules/@angular/forms",
         "//:node_modules/@angular/platform-browser",
         "//src/angular/core/testing",
