--- a/src/angular/status/BUILD.bazel
+++ b/src/angular/status/BUILD.bazel
@@ -41,6 +41,7 @@ ts_project(
     ),
     deps = [
         ":status",
+        "//:node_modules/@angular/core",
         "//:node_modules/@angular/platform-browser",
         "//src/angular/icon/testing",
     ],
