--- a/src/angular/accordion/BUILD.bazel
+++ b/src/angular/accordion/BUILD.bazel
@@ -44,6 +44,7 @@ ts_project(
     deps = [
         ":accordion",
         "//:node_modules/@angular/cdk",
+        "//:node_modules/@angular/core",
         "//:node_modules/@angular/platform-browser",
         "//src/angular/core/testing",
         "//src/angular/icon/testing",
