--- a/src/angular/autocomplete/BUILD.bazel
+++ b/src/angular/autocomplete/BUILD.bazel
@@ -46,6 +46,7 @@ ts_project(
     deps = [
         ":autocomplete",
         "//:node_modules/@angular/cdk",
+        "//:node_modules/@angular/core",
         "//:node_modules/@angular/forms",
         "//:node_modules/@angular/platform-browser",
         "//:node_modules/rxjs",
