--- a/src/angular/badge/BUILD.bazel
+++ b/src/angular/badge/BUILD.bazel
@@ -31,6 +31,7 @@ ts_project(
     ),
     deps = [
         ":badge",
+        "//:node_modules/@angular/core",
         "//:node_modules/@angular/platform-browser",
     ],
 )
