--- a/src/angular/breadcrumb/BUILD.bazel
+++ b/src/angular/breadcrumb/BUILD.bazel
@@ -42,6 +42,7 @@ ts_project(
     ),
     deps = [
         ":breadcrumb",
+        "//:node_modules/@angular/core",
         "//:node_modules/@angular/platform-browser",
         "//:node_modules/@angular/router",
         "//src/angular/core/testing",
