--- a/src/angular/button/BUILD.bazel
+++ b/src/angular/button/BUILD.bazel
@@ -34,6 +34,7 @@ ts_project(
     ),
     deps = [
         ":button",
+        "//:node_modules/@angular/core",
         "//:node_modules/@angular/platform-browser",
         "//src/angular/core/testing",
         "//src/angular/icon",
