--- a/src/angular/chips/BUILD.bazel
+++ b/src/angular/chips/BUILD.bazel
@@ -47,6 +47,7 @@ ts_project(
         ":chips",
         "//:node_modules/@angular/animations",
         "//:node_modules/@angular/cdk",
+        "//:node_modules/@angular/core",
         "//:node_modules/@angular/forms",
         "//:node_modules/@angular/platform-browser",
         "//src/angular/autocomplete",
