--- a/src/angular/dialog/BUILD.bazel
+++ b/src/angular/dialog/BUILD.bazel
@@ -46,6 +46,7 @@ ts_project(
         ":dialog",
         "//:node_modules/@angular/cdk",
         "//:node_modules/@angular/common",
+        "//:node_modules/@angular/core",
         "//:node_modules/@angular/platform-browser",
         "//:node_modules/rxjs",
         "//src/angular/core/testing",
