--- a/src/angular/header-lean/BUILD.bazel
+++ b/src/angular/header-lean/BUILD.bazel
@@ -76,6 +76,7 @@ ts_project(
     deps = [
         ":header-lean",
         "//:node_modules/@angular/cdk",
+        "//:node_modules/@angular/core",
         "//:node_modules/@angular/platform-browser",
         "//src/angular/core",
         "//src/angular/core/testing",
