--- a/src/angular/input/BUILD.bazel
+++ b/src/angular/input/BUILD.bazel
@@ -36,6 +36,7 @@ ts_project(
         ":input",
         "//:node_modules/@angular/cdk",
         "//:node_modules/@angular/common",
+        "//:node_modules/@angular/core",
         "//:node_modules/@angular/forms",
         "//:node_modules/@angular/platform-browser",
         "//src/angular/core",
