--- a/src/angular/lightbox/BUILD.bazel
+++ b/src/angular/lightbox/BUILD.bazel
@@ -47,6 +47,7 @@ ts_project(
         ":lightbox",
         "//:node_modules/@angular/cdk",
         "//:node_modules/@angular/common",
+        "//:node_modules/@angular/core",
         "//:node_modules/@angular/platform-browser",
         "//:node_modules/rxjs",
         "//src/angular/core/testing",
