--- a/src/angular/menu/BUILD.bazel
+++ b/src/angular/menu/BUILD.bazel
@@ -47,6 +47,7 @@ ts_project(
     deps = [
         ":menu",
         "//:node_modules/@angular/cdk",
+        "//:node_modules/@angular/core",
         "//:node_modules/@angular/platform-browser",
         "//:node_modules/rxjs",
         "//src/angular/core",
