--- a/src/angular/notification/BUILD.bazel
+++ b/src/angular/notification/BUILD.bazel
@@ -44,6 +44,7 @@ ts_project(
     ),
     deps = [
         ":notification",
+        "//:node_modules/@angular/core",
         "//:node_modules/@angular/platform-browser",
         "//src/angular/core/testing",
         "//src/angular/icon",
