--- a/src/angular/processflow/BUILD.bazel
+++ b/src/angular/processflow/BUILD.bazel
@@ -57,6 +57,7 @@ ts_project(
     deps = [
         ":processflow",
         "//:node_modules/@angular/cdk",
+        "//:node_modules/@angular/core",
         "//:node_modules/@angular/forms",
         "//:node_modules/@angular/platform-browser",
         "//:node_modules/rxjs",
