--- a/src/angular/radio-button-panel/BUILD.bazel
+++ b/src/angular/radio-button-panel/BUILD.bazel
@@ -32,6 +32,7 @@ ts_project(
     ),
     deps = [
         ":radio-button-panel",
+        "//:node_modules/@angular/core",
         "//:node_modules/@angular/forms",
         "//:node_modules/@angular/platform-browser",
         "//src/angular/icon",
