--- a/src/angular/radio-button/BUILD.bazel
+++ b/src/angular/radio-button/BUILD.bazel
@@ -33,6 +33,7 @@ ts_project(
     ),
     deps = [
         ":radio-button",
+        "//:node_modules/@angular/core",
         "//:node_modules/@angular/forms",
         "//:node_modules/@angular/platform-browser",
         "//src/angular/core/testing",
