--- a/src/angular/search/BUILD.bazel
+++ b/src/angular/search/BUILD.bazel
@@ -61,6 +61,7 @@ ts_project(
     deps = [
         ":search",
         "//:node_modules/@angular/cdk",
+        "//:node_modules/@angular/core",
         "//:node_modules/@angular/platform-browser",
         "//src/angular/autocomplete",
         "//src/angular/core/testing",
