--- a/src/angular/select/BUILD.bazel
+++ b/src/angular/select/BUILD.bazel
@@ -48,6 +48,7 @@ ts_project(
     deps = [
         ":select",
         "//:node_modules/@angular/cdk",
+        "//:node_modules/@angular/core",
         "//:node_modules/@angular/forms",
         "//:node_modules/@angular/platform-browser",
         "//:node_modules/rxjs",
