--- a/src/angular/sidebar/BUILD.bazel
+++ b/src/angular/sidebar/BUILD.bazel
@@ -68,6 +68,7 @@ ts_project(
     deps = [
         ":sidebar",
         "//:node_modules/@angular/cdk",
+        "//:node_modules/@angular/core",
         "//:node_modules/@angular/platform-browser",
         "//:node_modules/@angular/router",
         "//src/angular/accordion",
