--- a/src/angular/table/BUILD.bazel
+++ b/src/angular/table/BUILD.bazel
@@ -45,6 +45,7 @@ ts_project(
     deps = [
         ":table",
         "//:node_modules/@angular/cdk",
+        "//:node_modules/@angular/core",
         "//:node_modules/@angular/platform-browser",
         "//:node_modules/rxjs",
         "//src/angular/core/testing",
