--- a/src/angular/tag/BUILD.bazel
+++ b/src/angular/tag/BUILD.bazel
@@ -46,6 +46,7 @@ ts_project(
     ),
     deps = [
         ":tag",
+        "//:node_modules/@angular/core",
         "//:node_modules/@angular/forms",
         "//:node_modules/@angular/platform-browser",
         "//src/angular/badge",
