--- a/src/angular/textarea/BUILD.bazel
+++ b/src/angular/textarea/BUILD.bazel
@@ -44,6 +44,7 @@ ts_project(
     ),
     deps = [
         ":textarea",
+        "//:node_modules/@angular/core",
         "//:node_modules/@angular/forms",
         "//:node_modules/@angular/platform-browser",
         "//src/angular/core/testing",
