--- a/src/angular/textexpand/BUILD.bazel
+++ b/src/angular/textexpand/BUILD.bazel
@@ -42,6 +42,7 @@ ts_project(
     ),
     deps = [
         ":textexpand",
+        "//:node_modules/@angular/core",
         "//:node_modules/@angular/platform-browser",
         "//src/angular/core/testing",
     ],
