--- a/src/angular/usermenu/BUILD.bazel
+++ b/src/angular/usermenu/BUILD.bazel
@@ -45,6 +45,7 @@ ts_project(
     deps = [
         ":usermenu",
         "//:node_modules/@angular/cdk",
+        "//:node_modules/@angular/core",
         "//:node_modules/@angular/platform-browser",
         "//:node_modules/@angular/router",
         "//src/angular/icon",
