--- a/src/journey-maps/angular/BUILD.bazel
+++ b/src/journey-maps/angular/BUILD.bazel
@@ -172,6 +172,7 @@ ts_project(
     deps = [
         ":angular",
         "//:node_modules/@angular/common",
+        "//:node_modules/@angular/core",
         "//:node_modules/@angular/platform-browser",
         "//:node_modules/maplibre-gl",
         "//:node_modules/rxjs",
