--- a/src/angular/schematics/BUILD.bazel
+++ b/src/angular/schematics/BUILD.bazel
@@ -1,5 +1,5 @@
 load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
-load("//tools:defaults.bzl", "jasmine_test", "npm_package", "ts_project")
+load("//tools:defaults.bzl", "npm_package", "ts_project")
 load("@aspect_rules_ts//ts:defs.bzl", rules_js_tsconfig = "ts_config")
 
 package(default_visibility = [":__subpackages__"])
@@ -96,14 +96,5 @@ ts_project(
         "//:node_modules/@types/jasmine",
         "//:node_modules/@types/node",
         "//:node_modules/typescript",
-        "//src/angular/schematics/testing",
-    ],
-)
-
-jasmine_test(
-    name = "unit_tests",
-    data = [
-        ":schematics_assets",
-        ":unit_test_sources",
     ],
 )
