--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "bazel:buildifier": "find . -type f \\( -name \"*.bzl\" -or -name WORKSPACE -or -name BUILD -or -name BUILD.bazel \\) ! -path \"*/node_modules/*\" ! -path \"*/.git/*\" | xargs buildifier -v",
     "bazel:format-lint": "pnpm -s bazel:buildifier --lint=warn --mode=check",
     "start": "ibazel run //docs:serve",
-    "start:journey-maps-wc": "ibazel run //src/journey-maps/web-component:devserver",
+    "start:journey-maps-wc": "ibazel run //src/journey-maps-wc:serve",
     "test": "node ./scripts/run-component-tests.js",
     "test-local": "pnpm -s test --local",
     "test-firefox": "pnpm -s test --firefox",
@@ -59,6 +59,7 @@
     "@angular/common": "catalog:",
     "@angular/compiler": "catalog:",
     "@angular/core": "catalog:",
+    "@angular/elements": "catalog:",
     "@angular/forms": "catalog:",
     "@angular/platform-browser": "catalog:",
     "@stackblitz/sdk": "1.11.0",
