--- a/.bazelignore
+++ b/.bazelignore
@@ -6,3 +6,4 @@ src/angular-experimental/node_modules
 src/angular/node_modules
 src/components-examples/node_modules
 src/journey-maps/node_modules
+src/journey-maps-wc/node_modules
