--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -77,8 +77,7 @@ jobs:
           cache: 'pnpm'
           node-version-file: '.nvmrc'
       - run: pnpm install
-      - name: Run tests
-        run: bazel build --build_tag_filters=-docs-package,-release-package -- src/...
+      - run: bazel build --build_tag_filters=-docs-package,-release-package -- src/...
 
   test:
     runs-on: ubuntu-22.04
@@ -102,9 +101,7 @@ jobs:
           cache: 'pnpm'
           node-version-file: '.nvmrc'
       - run: pnpm install
-
-      - name: "Bazel: Run local tests"
-        run: bazelisk test src/... --build_tag_filters=-e2e --test_tag_filters=-e2e --build_tests_only
+      - run: bazelisk test src/... --build_tag_filters=-e2e --test_tag_filters=-e2e --build_tests_only
 
   docs:
     runs-on: ubuntu-latest
