--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,6 +63,10 @@ jobs:
       run: pnpm publish dist/releases/journey-maps --tag ${{ steps.npm_tag.outputs.npm_tag }} || true
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+    - name: "Publish: @sbb-esta/journey-maps"
+      run: pnpm publish dist/releases/journey-maps-wc --tag ${{ steps.npm_tag.outputs.npm_tag }} || true
+      env:
+        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
   showcase:
     runs-on: ubuntu-latest
