--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "history-server": "1.3.1",
     "html-insert-assets": "0.14.3",
     "husky": "9.1.7",
+    "iced-runtime": "^1.0.4",
     "jasmine": "4.6.0",
     "jasmine-core": "4.6.1",
     "jasmine-reporters": "^2.5.2",
