--- a/package.json
+++ b/package.json
@@ -177,6 +177,11 @@
           "protobufjs": "7.4.0"
         }
       },
+      "iced-error": {
+        "dependencies": {
+          "iced-runtime": "^1.0.4"
+        }
+      },
       "@angular-eslint/eslint-plugin-template@19.3.0": {
         "peerDependencies": {
           "@typescript-eslint/parser": "*",
