--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -8,24 +8,24 @@ packages:
   - src/journey-maps-wc
 
 catalog:
-  '@angular-devkit/build-angular': 20.0.0-rc.0
-  '@angular-devkit/core': 20.0.0-rc.0
-  '@angular-devkit/schematics': 20.0.0-rc.0
-  '@angular/animations': 20.0.0-rc.0
-  '@angular/build': 20.0.0-rc.0
-  '@angular/cdk': 20.0.0-rc.0
-  '@angular/cli': 20.0.0-rc.0
-  '@angular/common': 20.0.0-rc.0
-  '@angular/compiler-cli': 20.0.0-rc.0
-  '@angular/compiler': 20.0.0-rc.0
-  '@angular/core': 20.0.0-rc.0
-  '@angular/elements': 20.0.0-rc.0
-  '@angular/ssr': 20.0.0-rc.0
-  '@angular/forms': 20.0.0-rc.0
-  '@angular/localize': 20.0.0-rc.0
-  '@angular/platform-browser': 20.0.0-rc.0
-  '@angular/platform-browser-dynamic': 20.0.0-rc.0
-  '@angular/platform-server': 20.0.0-rc.0
-  '@angular/router': 20.0.0-rc.0
-  '@schematics/angular': 20.0.0-rc.0
+  '@angular-devkit/build-angular': 20.0.0
+  '@angular-devkit/core': 20.0.0
+  '@angular-devkit/schematics': 20.0.0
+  '@angular/animations': 20.0.0
+  '@angular/build': 20.0.0
+  '@angular/cdk': 20.0.0
+  '@angular/cli': 20.0.0
+  '@angular/common': 20.0.0
+  '@angular/compiler-cli': 20.0.0
+  '@angular/compiler': 20.0.0
+  '@angular/core': 20.0.0
+  '@angular/elements': 20.0.0
+  '@angular/ssr': 20.0.0
+  '@angular/forms': 20.0.0
+  '@angular/localize': 20.0.0
+  '@angular/platform-browser': 20.0.0
+  '@angular/platform-browser-dynamic': 20.0.0
+  '@angular/platform-server': 20.0.0
+  '@angular/router': 20.0.0
+  '@schematics/angular': 20.0.0
   'rxjs': 7.8.1
