--- a/src/journey-maps-wc/package.json
+++ b/src/journey-maps-wc/package.json
@@ -12,7 +12,7 @@
   "homepage": "https://angular.app.sbb.ch",
   "exports": {
     ".": {
-      "default": "./main.js"
+      "default": "./bundle.js"
     },
     "./styles.css": {
       "default": "./styles.css"
