--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sbb-angular",
-  "version": "20.0.0-next.4",
+  "version": "20.0.0",
   "private": true,
   "packageManager": "pnpm@9.15.6",
   "engines": {
