--- a/renovate.json
+++ b/renovate.json
@@ -7,6 +7,7 @@
   "baseBranches": ["main", "20.x"],
   "ignorePaths": ["docs/src/assets/stack-blitz/**"],
   "schedule": ["after 10pm every weekday", "before 5am every weekday", "every weekend"],
+  "timezone": "Europe/Zurich",
   "lockFileMaintenance": {
     "schedule": ["before 7am on thursday"],
     "enabled": true
