ci: use `includePaths` in Renovate config
Undo changes from #2577 because when using `ignorePaths`, too many dependencies are updated, including the ones from `WORKSPACE` and `component-examples`

--- a/renovate.json
+++ b/renovate.json
@@ -5,7 +5,7 @@
   "gitAuthor": "sbb-angular-renovate<100206640+sbb-angular-renovate[bot]@users.noreply.github.com>",
   "repositories": ["sbb-design-systems/sbb-angular"],
   "baseBranches": ["main", "20.x"],
-  "ignorePaths": ["docs/src/assets/stack-blitz/**", "WORKSPACE"],
+  "includePaths": ["package.json", ".github/**", "pnpm-lock.yaml", "pnpm-workspace.yaml"],
   "timezone": "Europe/Zurich",
   "lockFileMaintenance": {
     "schedule": ["before 7am on thursday"],
