--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -9,12 +9,20 @@
     "declaration": false,
     "downlevelIteration": true,
     "experimentalDecorators": true,
-    "module": "es2020",
-    "moduleResolution": "node",
+    "module": "es2022",
+    "moduleResolution": "bundler",
     "importHelpers": true,
     "target": "ES2022",
     "typeRoots": ["node_modules/@types"],
     "lib": ["es2018", "dom"],
+    "paths": {
+      "@sbb-esta/angular": ["../src/angular"],
+      "@sbb-esta/angular/*": ["../src/angular/*"],
+      "@sbb-esta/components-examples": ["../src/components-examples"],
+      "@sbb-esta/components-examples/*": ["../src/components-examples/*"],
+      "@sbb-esta/journey-maps": ["../src/journey-maps"],
+      "@sbb-esta/journey-maps/*": ["../src/journey-maps/*"]
+    },
     "noImplicitAny": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
@@ -31,6 +39,9 @@
     "fullTemplateTypeCheck": true,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "strictTemplates": true,
+    "strictInputTypes": true,
+    "strictOutputEventTypes": true,
+    "strictDomEventTypes": true
   }
 }
