--- a/docs/BUILD.bazel
+++ b/docs/BUILD.bazel
@@ -38,6 +38,7 @@ ng_app(
         "//docs:node_modules/highlight.js",
         "//docs:node_modules/maplibre-gl",
         "//docs:node_modules/path-normalize",
+        "//docs:node_modules/zone.js",
     ],
 )
 
