--- a/tools/schematics/tsconfig.json
+++ b/tools/schematics/tsconfig.json
@@ -6,7 +6,7 @@
     "declaration": false,
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "noEmitOnError": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
