--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,6 +36,7 @@
   "angularCompilerOptions": {
     "strictTemplates": true,
     "typeCheckHostBindings": true,
+    "strictInputAccessModifiers": true,
     "strictInputTypes": true,
     "strictOutputEventTypes": true,
     "strictDomEventTypes": true,
