--- a/docs/src/assets/stack-blitz/tsconfig.json
+++ b/docs/src/assets/stack-blitz/tsconfig.json
@@ -12,7 +12,7 @@
     "declaration": false,
     "downlevelIteration": true,
     "experimentalDecorators": true,
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "importHelpers": true,
     "target": "es2022",
     "module": "esnext",
