--- a/src/angular/badge/BUILD.bazel
+++ b/src/angular/badge/BUILD.bazel
@@ -3,7 +3,6 @@ load(
     "markdown_to_html",
     "ng_project",
     "ng_web_test_suite",
-    "ts_project",
 )
 
 package(default_visibility = ["//visibility:public"])
@@ -22,7 +21,7 @@ ng_project(
     ],
 )
 
-ts_project(
+ng_project(
     name = "unit_test_sources",
     testonly = True,
     srcs = glob(
