--- a/src/angular/core/BUILD.bazel
+++ b/src/angular/core/BUILD.bazel
@@ -3,7 +3,6 @@ load(
     "ng_project",
     "ng_web_test_suite",
     "sass_binary",
-    "ts_project",
 )
 
 package(default_visibility = ["//visibility:public"])
@@ -34,7 +33,7 @@ sass_binary(
     ],
 )
 
-ts_project(
+ng_project(
     name = "unit_test_sources",
     testonly = True,
     srcs = glob(
