--- a/src/angular/sidebar/BUILD.bazel
+++ b/src/angular/sidebar/BUILD.bazel
@@ -5,7 +5,6 @@ load(
     "ng_web_test_suite",
     "sass_binary",
     "sass_library",
-    "ts_project",
 )
 
 package(default_visibility = ["//visibility:public"])
@@ -58,7 +57,7 @@ sass_binary(
     ],
 )
 
-ts_project(
+ng_project(
     name = "unit_test_sources",
     testonly = True,
     srcs = glob(
