--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "dgeni-packages": "^0.29.3",
     "esbuild": "0.27.0",
     "fs-extra": "11.3.2",
+    "nanoid": "^5.1.6",
     "highlight.js": "^11.8.0",
     "history-server": "1.3.1",
     "html-insert-assets": "0.14.3",
