--- a/src/angular/schematics/tsconfig.json
+++ b/src/angular/schematics/tsconfig.json
@@ -3,7 +3,7 @@
     "declaration": true,
     "lib": ["es2017"],
     "module": "commonjs",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "rootDir": ".",
     "strictNullChecks": true,
     "noPropertyAccessFromIndexSignature": true,
