--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -2,6 +2,17 @@ FROM ubuntu:latest
 LABEL authors="mario"
 
 # install patch
-RUN apt-get update && apt-get install -y patch
+RUN apt-get update && apt-get install -y \
+    patch \
+    curl \
+    git \
+    vim \
+  && rm -rf /var/lib/apt/lists/*
+
+# Node.js 22 + pnpm (via corepack)
+RUN curl -fsSL https://deb.nodesource.com/setup_22.x | bash - \
+  && apt-get install -y nodejs \
+  && corepack enable \
+  && corepack prepare pnpm@latest --activate
 
 ENTRYPOINT ["top", "-b"]
