--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,6 +1,7 @@
-FROM ubuntu:latest
+FROM --platform=linux/amd64 ubuntu:latest
 LABEL authors="mario"
 
+# Install system dependencies
 RUN apt-get update && apt-get install -y \
     wget \
     gnupg \
@@ -10,16 +11,24 @@ RUN apt-get update && apt-get install -y \
     git \
     vim \
     build-essential \
-  && wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | gpg --dearmor -o /usr/share/keyrings/google-chrome-keyring.gpg \
+  && rm -rf /var/lib/apt/lists/*
+
+# Install Google Chrome
+RUN wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | gpg --dearmor -o /usr/share/keyrings/google-chrome-keyring.gpg \
   && echo "deb [arch=amd64 signed-by=/usr/share/keyrings/google-chrome-keyring.gpg] http://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google-chrome.list \
   && apt-get update \
   && apt-get install -y google-chrome-stable --no-install-recommends \
   && rm -rf /var/lib/apt/lists/*
 
-# Node.js 22 + pnpm (via corepack)
-RUN curl -fsSL https://deb.nodesource.com/setup_22.x | bash - \
-  && apt-get install -y nodejs \
+# Install Node.js 22 via NVM and enable corepack for pnpm
+ENV NVM_DIR=/root/.nvm
+ENV NODE_VERSION=22
+RUN curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.40.1/install.sh | bash \
+  && . "$NVM_DIR/nvm.sh" \
+  && nvm install $NODE_VERSION \
+  && nvm use $NODE_VERSION \
+  && nvm alias default $NODE_VERSION \
   && corepack enable \
-  && corepack prepare pnpm@latest --activate
+  && ln -sf "$NVM_DIR/versions/node/$(nvm version)/bin/"* /usr/local/bin/
 
 ENTRYPOINT ["top", "-b"]
