--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -8,24 +8,24 @@ packages:
   - src/journey-maps-wc
 
 catalog:
-  '@angular-devkit/build-angular': 21.0.0-rc.1
-  '@angular-devkit/core': 21.0.0-rc.1
-  '@angular-devkit/schematics': 21.0.0-rc.1
-  '@angular/animations': 21.0.0-rc.1
-  '@angular/build': 21.0.0-rc.1
-  '@angular/cdk': 21.0.0-rc.1
-  '@angular/cli': 21.0.0-rc.1
-  '@angular/common': 21.0.0-rc.1
-  '@angular/compiler-cli': 21.0.0-rc.1
-  '@angular/compiler': 21.0.0-rc.1
-  '@angular/core': 21.0.0-rc.1
-  '@angular/elements': 21.0.0-rc.1
+  '@angular-devkit/build-angular': 21.0.0
+  '@angular-devkit/core': 21.0.0
+  '@angular-devkit/schematics': 21.0.0
+  '@angular/animations': 21.0.0
+  '@angular/build': 21.0.0
+  '@angular/cdk': 21.0.0
+  '@angular/cli': 21.0.0
+  '@angular/common': 21.0.0
+  '@angular/compiler-cli': 21.0.0
+  '@angular/compiler': 21.0.0
+  '@angular/core': 21.0.0
+  '@angular/elements': 21.0.0
   '@angular/ssr': 20.3.9
-  '@angular/forms': 21.0.0-rc.1
-  '@angular/localize': 21.0.0-rc.1
-  '@angular/platform-browser': 21.0.0-rc.1
-  '@angular/platform-browser-dynamic': 21.0.0-rc.1
-  '@angular/platform-server': 21.0.0-rc.1
-  '@angular/router': 21.0.0-rc.1
-  '@schematics/angular': 21.0.0-rc.1
+  '@angular/forms': 21.0.0
+  '@angular/localize': 21.0.0
+  '@angular/platform-browser': 21.0.0
+  '@angular/platform-browser-dynamic': 21.0.0
+  '@angular/platform-server': 21.0.0
+  '@angular/router': 21.0.0
+  '@schematics/angular': 21.0.0
   'rxjs': 7.8.1
